Replace emptyList